# news-dashboard

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  PI-ATTEMPT-531.txt  PI-ATTEMPT-538.txt  PI-ATTEMPT-633.txt  PI-ATTEMPT-635.txt  PI-ATTEMPT-636.txt  PI-ATTEMPT-648.txt  PI-ATTEMPT-750.txt  PI-ATTEMPT-768.txt  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  codecov.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/skills/langfuse/: SKILL.md
.claude/skills/python-dev/: SKILL.md
.claude/skills/report-issue/: SKILL.md
.claude/skills/tdd-ship/: SKILL.md
.claude/skills/typescript-dev/: SKILL.md
.claude/skills/write-documentation/: SKILL.md
.devcontainer/: devcontainer.json  docker-compose.yml  postgres-init.sql
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  auto-merge.yml  ci.yml  codeql.yml  dependency-review.yml  desktop.yml  docs.yml  nightly.yml  pr-metrics.yml  release.yml  trivy-scan.yml
android/: README.md  twa-manifest.json
android/app/: build.gradle
backend/news_dashboard/: ai_client.py  analytics.py  article_visibility.py  auth.py  body_fetch.py  briefings.py  cli.py  db.py  demo.py  digest.py  email.py  embeddings.py  export.py  ingest.py  ingest_events.py  insights.py  keycloak_admin.py  login_throttle.py  main.py  main.py.bak  metrics.py  migrate.py  personal_highlights.py  personalization_nudges.py  perspectives.py  podcast_feed.py  prompt_optimizer.py  push.py  quiz.py  recommendation_jobs.py  recommendations.py  run_history.py  scheduled_job_history.py  scheduler.py  scraper.py  selenium_client.py  shares.py  source_health.py  sources.py  stats.py  (+3 more)
backend/news_dashboard/ai_stats/: __init__.py  router.py  service.py
backend/news_dashboard/quizzes/: __init__.py  models.py  router.py  service.py
backend/news_dashboard/reading_progress/: __init__.py  models.py  router.py  service.py
backend/tests/: conftest.py  test_ai_client.py  test_ai_credentials.py  test_ai_stats.py  test_ai_stats_api.py  test_article_highlights.py  test_article_shares.py  test_ask_scope.py  test_auth.py  test_auth_extra.py  test_behavioral_affinity.py  test_body_fetch.py  test_briefings_api.py  test_briefings_db.py  test_changelog_endpoint.py  test_chart_render.py  test_chrome_developers_blog_source.py  test_ci_merge_queue.py  test_cli.py  test_compose_auth_env.py  test_conftest_schema_sweep.py  test_database_config.py  test_db_init.py  test_deepmind_blog_source.py  test_demo.py  test_digest.py  test_env_example.py  test_export.py  test_feedback_api.py  test_hf_blog_ingest.py  test_ingest.py  test_ingest_dedupe_boundaries.py  test_ingest_route_auth.py  test_ingest_runs.py  test_insights.py  test_keycloak_admin.py  test_media_ingest.py  test_meta_ai_blog_source.py  test_metrics_endpoint.py  test_migrate_multi_user.py  (+43 more)
deploy/: Caddyfile  news.example.com.caddyfile  news.example.com.caddyfile.disabled  news.lihor.ro.caddyfile.disabled
design/radar-source/: package.json
design/radar-source/src/: styles.css
desktop/: README.md  electron-builder.yml  package-lock.json  package.json
desktop/assets/: icon.icns
desktop/src/: main.js  preload.js  url-helper.js  url-helper.test.js
docs/: ARCHITECTURE.md  CADDY_HTTPS_SETUP.md  KEYCLOAK_AUTH.md  POSTGRES_BACKUP.md  PRODUCT_SPEC.md  README.md  RUNNER_SETUP.md  SELF_HOSTING.md  runner-setup.md
docs/adr/: 0000-template.md  0001-postgresql-only-runtime.md  0002-llm-gateway-fallback.md  0003-feature-module-packages.md  README.md
docs/superpowers/specs/: 2026-06-13-saved-briefings-mobile-home-design.md
docs/user-guide/: README.md
e2e/: a11y-helper.ts  a11y.spec.ts  admin-vs-user.spec.ts  article-pages.spec.ts  brief.spec.ts  briefs.spec.ts  command-palette.spec.ts  feeds.spec.ts  fixtures.ts  keyboard-shortcuts.spec.ts  mobile.spec.ts  navigation.spec.ts  pwa.spec.ts  today.spec.ts
frontend/src/: App.tsx  AppRouter.tsx  api.ts  globals.css  main.tsx  styles.css  test-setup.ts  types.ts
frontend/src/__tests__/: SwipeableRow.test.tsx  aiStatsPage.test.tsx  analytics.test.ts  api.test.ts  appLogo.test.tsx  appShellStickyNav.test.ts  articleListView.test.tsx  articleReader.test.tsx  articleTags.test.tsx  ask.test.tsx  auth.test.tsx  brandRebrand.test.tsx  brief.test.tsx  briefingsHistory.test.tsx  commandPalette.test.tsx  convexHull.test.ts  dailyBriefSettings.test.tsx  errorTracking.test.ts  feedNudgeBanner.test.tsx  feedsPages.test.tsx  format.test.ts  i18n.test.tsx  keyboard.test.ts  listenQueue.test.tsx  listenQueuePlayer.test.tsx  navigation.test.ts  onboardingWizard.test.tsx  palette.test.tsx  pushHandler.test.ts  pwa.test.ts  quizCandidates.test.tsx  readerList.test.ts  readingDnaQuizHistory.test.tsx  readingDnaQuizUx.test.tsx  readingProgress.test.tsx  readingTime.test.ts  recommendationContracts.test.tsx  recommendationLabel.test.tsx  routing.test.tsx  schedulerPage.test.tsx  (+19 more)
frontend/src/api/: tagsApi.ts  workflowApi.ts
frontend/src/components/: AppLogo.tsx  AppShell.tsx  BriefingChat.tsx  BriefingView.tsx  CategoryFilter.tsx  CommandPalette.tsx  EmptyState.tsx  FeedNudgeBanner.tsx  ListenQueuePlayer.tsx  OnboardingWizard.tsx  (+6 more)
helm/news-dashboard/: Chart.yaml  values.yaml
public/: manifest.webmanifest  push-handler.js
scripts/: bump_version.py  deploy-local-k8s.sh  humanize_commits.py  next_version.sh  test_agent_skill_sync.py  test_bump_version.py  test_caddy_source_of_truth.py  test_ci_deploy_namespace.py  test_helm_postgres_backup.py  test_humanize_commits.py  test_repo_metadata.py  test_trivy_workflows.py  test_update_changelog.py  update_changelog.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/static/: CNAME
(+133 files in other folders)
