[project]
name = "news-dashboard"
version = "0.1.0"
description = "Private news inbox, reading tracker, summaries, and source dashboard"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "feedparser>=6.0.11",
  "typer>=0.12.0",
  "psycopg[binary]>=3.2.0",
  "apscheduler>=3.10.0",
  "openai>=1.50.0",
  "langfuse>=3.0.0",
  "numpy>=1.26.0",
  "rapidfuzz>=3.0.0",
  "bcrypt>=4.0.0",
  "httpx>=0.27.0",
  "itsdangerous>=2.2.0",
  "pywebpush>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "ty>=0.0.49",
  "pyrefly>=1.1.0",
  "pre-commit>=4.0.0",
  "testcontainers[postgres]>=4.8.0",
]

[project.scripts]
news-dashboard = "news_dashboard.cli:app"
news-dashboard-migrate = "news_dashboard.migrate:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/news_dashboard"]

[tool.hatch.build.targets.editable]
packages = ["backend/news_dashboard"]

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests", "scripts"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error::DeprecationWarning:news_dashboard.*"]

[tool.coverage.run]
source = ["news_dashboard"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "pragma: no cover",
]

# ── ruff (lint + format) ─────────────────────────────────────────────────────
[tool.ruff]
# py313, not py314: the formatter would otherwise rewrite except clauses to
# PEP 758 syntax, which mypy's parser does not support yet.
target-version = "py313"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",          # pyflakes
  "I",          # isort
  "N",          # pep8-naming
  "UP",         # pyupgrade
  "B",          # flake8-bugbear
  "A",          # flake8-builtins
  "C4",         # flake8-comprehensions
  "DTZ",        # flake8-datetimez
  "EM",         # flake8-errmsg
  "G",          # flake8-logging-format
  "ISC",        # implicit string concatenation
  "PIE",        # flake8-pie
  "PT",         # flake8-pytest-style
  "RET",        # flake8-return
  "RSE",        # flake8-raise
  "S",          # flake8-bandit (security)
  "SIM",        # flake8-simplify
  "T20",        # flake8-print
  "TC",         # type-checking imports
  "ARG",        # unused arguments
  "PERF",       # perflint
  "PL",         # pylint
  "RUF",        # ruff-specific
  "TRY",        # tryceratops
  "TID",        # flake8-tidy-imports
]
ignore = [
  "UP017",   # keep `timezone.utc`: identical semantics, broader tooling compat
  "TRY003",  # short messages inline in raise are fine at this project size
  "TRY300",  # `return` in try block is often clearer than `else`
  "PLR2004", # magic-value comparisons are mostly self-explanatory here
  "S608",    # SQL built from trusted literal identifiers only (reviewed)
  "TC001", "TC002", "TC003",  # runtime imports kept simple; no TYPE_CHECKING blocks
  "ISC001",  # conflicts with the ruff formatter
  "PLC0415", # lazy imports are deliberate (optional deps, startup cost, cycles)
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = [
  "S101",    # asserts are the point of tests
  "ARG001",  # fixtures often unused directly
  "PLR0915", # long test functions are acceptable
]
"scripts/bump_version.py" = [
  "S603",    # subprocess calls git with trusted CI-controlled arguments
  "T201",    # print is the intended CLI output for shell consumption
]
"scripts/test_bump_version.py" = [
  "S101",    # asserts are the point of tests
  "PT009",   # plain assert is preferred over self.assertEqual here
]
"scripts/test_update_changelog.py" = [
  "S101",    # asserts are the point of tests
  "PT009",   # plain assert is preferred over self.assertEqual here
]
"scripts/test_agent_skill_sync.py" = [
  "S101",    # asserts are the point of tests
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.format]
docstring-code-format = true

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.14"
files = ["backend"]
strict = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ["feedparser.*", "apscheduler.*", "testcontainers.*", "pywebpush.*", "py_vapid.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

# ── ty (Astral type checker) ─────────────────────────────────────────────────
[tool.ty.environment]
# Resolve the `news_dashboard` package from backend/, mirroring mypy's
# files=["backend"] and pytest's pythonpath=["backend"]. Without this, ty falls
# back to whatever editable install is on sys.path (possibly a stale worktree).
python-version = "3.14"
extra-paths = ["backend"]

[tool.ty.src]
include = ["backend"]

# ── pyrefly (Meta type checker) ──────────────────────────────────────────────
[tool.pyrefly]
python-version = "3.14"
project-includes = ["backend"]
search-path = ["backend"]
