[project]
name = "news-dashboard"
version = "1.21.0"
description = "Self-hosted news inbox: curated feeds, triage, search, and AI briefings"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "lihor-hub" }]
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.138.2",
  "uvicorn[standard]>=0.49.0",
  "feedparser>=6.0.11",
  "psycopg[binary]>=3.3.4",
  "typer>=0.26.8",
  "apscheduler>=3.11.3",
  "openai>=2.44.0",
  "langfuse>=3.0.0",
  "numpy>=2.5.0",
  "rapidfuzz>=3.0.0",
  "bcrypt>=4.0.0",
  "httpx>=0.27.0",
  "itsdangerous>=2.2.0",
  "pywebpush>=2.0.0",
  "selenium>=4.0.0",
  "webdriver-manager>=4.0.0",
  "python-multipart>=0.0.20",
  "defusedxml>=0.7.1",
  "prometheus-client>=0.21.0",
  "sentry-sdk>=2.0.0",
]

[project.optional-dependencies]
# Optional deterministic body-extraction layer (issue #745). Pulls in a heavy
# browser/LLM tree, so it is opt-in: install with `pip install '.[crawl4ai]'`
# and run `crawl4ai-setup` (or `playwright install chromium`) once to fetch the
# browser. When absent, body extraction gracefully skips this layer.
crawl4ai = [
  "crawl4ai>=0.1.0",
]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.15.20",
  "mypy>=1.13.0",
  "ty>=0.0.55",
  "pyrefly>=1.1.0",
  "pre-commit>=4.0.0",
  "testcontainers[postgres]>=4.14.2",
  "pytest-xdist>=3.0.0",
  "types-defusedxml>=0.7.0",
]

[project.scripts]
news-dashboard = "news_dashboard.cli:app"
news-dashboard-migrate = "news_dashboard.migrate:app"

[project.urls]
Homepage = "https://docs.lihor.ro"
Repository = "https://github.com/lihor-hub/news-dashboard"
Documentation = "https://docs.lihor.ro"
Changelog = "https://github.com/lihor-hub/news-dashboard/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/lihor-hub/news-dashboard/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/news_dashboard"]

[tool.hatch.build.targets.editable]
packages = ["backend/news_dashboard"]

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests", "scripts"]
addopts = "-ra --strict-markers --strict-config -n auto"
filterwarnings = ["error::DeprecationWarning:news_dashboard.*"]
markers = [
  "smoke: fast, high-signal tests covering app boot, health, and core API paths (no external services required)",
  "db: tests requiring a live PostgreSQL instance (testcontainers or CI service container)",
  "slow: expensive or long-running tests reserved for the nightly suite",
  "postgres: alias for db — marks tests that require a live PostgreSQL instance",
]

[tool.coverage.run]
source = ["news_dashboard"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "pragma: no cover",
]

# ── ruff (lint + format) ─────────────────────────────────────────────────────
[tool.ruff]
# py313, not py314: the formatter would otherwise rewrite except clauses to
# PEP 758 syntax, which mypy's parser does not support yet.
target-version = "py313"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",          # pyflakes
  "I",          # isort
  "N",          # pep8-naming
  "UP",         # pyupgrade
  "B",          # flake8-bugbear
  "A",          # flake8-builtins
  "C4",         # flake8-comprehensions
  "DTZ",        # flake8-datetimez
  "EM",         # flake8-errmsg
  "G",          # flake8-logging-format
  "ISC",        # implicit string concatenation
  "PIE",        # flake8-pie
  "PT",         # flake8-pytest-style
  "RET",        # flake8-return
  "RSE",        # flake8-raise
  "S",          # flake8-bandit (security)
  "SIM",        # flake8-simplify
  "T20",        # flake8-print
  "TC",         # type-checking imports
  "ARG",        # unused arguments
  "PERF",       # perflint
  "PL",         # pylint
  "RUF",        # ruff-specific
  "TRY",        # tryceratops
  "TID",        # flake8-tidy-imports
]
ignore = [
  "UP017",   # keep `timezone.utc`: identical semantics, broader tooling compat
  "TRY003",  # short messages inline in raise are fine at this project size
  "TRY300",  # `return` in try block is often clearer than `else`
  "PLR2004", # magic-value comparisons are mostly self-explanatory here
  "S608",    # SQL built from trusted literal identifiers only (reviewed)
  "TC001", "TC002", "TC003",  # runtime imports kept simple; no TYPE_CHECKING blocks
  "ISC001",  # conflicts with the ruff formatter
  "PLC0415", # lazy imports are deliberate (optional deps, startup cost, cycles)
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = [
  "S101",    # asserts are the point of tests
  "ARG001",  # fixtures often unused directly
  "PLR0915", # long test functions are acceptable
]
"scripts/bump_version.py" = [
  "S603",    # subprocess calls git with trusted CI-controlled arguments
  "T201",    # print is the intended CLI output for shell consumption
]
"scripts/humanize_commits.py" = [
  "T201",    # print is the intended CLI output for shell consumption
]
"scripts/test_humanize_commits.py" = [
  "S101",    # asserts are the point of tests
  "PT009",   # plain assert is preferred over self.assertEqual here
]
"scripts/test_bump_version.py" = [
  "S101",    # asserts are the point of tests
  "PT009",   # plain assert is preferred over self.assertEqual here
]
"scripts/test_update_changelog.py" = [
  "S101",    # asserts are the point of tests
  "PT009",   # plain assert is preferred over self.assertEqual here
]
"scripts/test_agent_skill_sync.py" = [
  "S101",    # asserts are the point of tests
]
"scripts/test_repo_metadata.py" = [
  "S101",    # asserts are the point of tests
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.format]
docstring-code-format = true

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.14"
files = ["backend"]
strict = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ["feedparser.*", "apscheduler.*", "testcontainers.*", "pywebpush.*", "py_vapid.*", "webdriver_manager.*", "selenium.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

# ── ty (Astral type checker) ─────────────────────────────────────────────────
[tool.ty.environment]
# Resolve the `news_dashboard` package from backend/, mirroring mypy's
# files=["backend"] and pytest's pythonpath=["backend"]. Without this, ty falls
# back to whatever editable install is on sys.path (possibly a stale worktree).
# backend/tests is included too: pytest has no backend/tests/__init__.py, so it
# inserts that directory onto sys.path at collection time, letting test modules
# do `from conftest import ...` as a bare top-level import.
python-version = "3.14"
extra-paths = ["backend", "backend/tests"]

[tool.ty.src]
include = ["backend", "backend/tests"]

# ── pyrefly (Meta type checker) ──────────────────────────────────────────────
[tool.pyrefly]
python-version = "3.14"
project-includes = ["backend"]
search-path = ["backend", "backend/tests"]
